<?xml version="1.0"?>
<package>
  <name>turtlebot_msgs</name>
  <version>2.1.0</version>
  <description>Turtlebot messages, services and actions</description>

  <author email="jorge@rnd.yujinrobot.com">Jorge Santos</author>
  <maintainer email="jorge@rnd.yujinrobot.com">Jorge Santos</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_msgs</url> 
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>